Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5105

Assert on Socks.cc line 67, due to remote_addr not set in connect_re_internal

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • SOCKS
    • None

    Description

      traffic_server: using root directory '/usr/local'
      traffic_server: Abort trap
      traffic_server - STACK TRACE:
      0x4b07a9 <_Z19crash_logger_invokeiP9__siginfoPv+0x69> at /usr/local/bin/traffic_server
      0x80275ab37 <pthread_sigmask+0x507> at /lib/libthr.so.3
      0x80275a22c <pthread_getspecific+0xe1c> at /lib/libthr.so.3
      [Dec 21 17:27:34.840] Server {0x804006400} DEBUG: <Socks.cc:462 (loadSocksConfiguration)> (Socks) Socks Version 4
      [Dec 21 17:27:34.840] Server {0x804006400} DEBUG: <Socks.cc:472 (loadSocksConfiguration)> (Socks) server connect timeout: 10 socks respnonse timeout 100
      [Dec 21 17:27:34.840] Server {0x804006400} DEBUG: <Socks.cc:482 (loadSocksConfiguration)> (SocksProxy) Read SocksProxy info: accept_enabled = 0 accept_port = 1080 http_port = 80
      [Dec 21 17:27:34.841] Server {0x804006400} DEBUG: <Socks.cc:489 (loadSocksConfiguration)> (Socks) Socks Config File: /usr/local/etc/trafficserver/socks.config
      [Dec 21 17:27:34.842] Server {0x804006400} DEBUG: <Socks.cc:517 (loadSocksConfiguration)> (Socks) Socks Turned on
      [Dec 21 17:27:35.052] Server {0x804008000} DEBUG: <UnixNetProcessor.cc:228 (connect_re_internal)> (Socks) Using Socks ip: 216.58.192.142:80
      Assertion failed: (ats_is_ip4(&target_addr)), function init, file Socks.cc, line 67.
      traffic_server: using root directory '/usr/local'
      traffic_server: Abort trap
      traffic_server - STACK TRACE:
      0x4b07a9 <_Z19crash_logger_invokeiP9__siginfoPv+0x69> at /usr/local/bin/traffic_server
      0x80275ab37 <pthread_sigmask+0x507> at /lib/libthr.so.3
      0x80275a22c <pthread_getspecific+0xe1c> at /lib/libthr.so.3
      

      Attachments

        Issue Links

          Activity

            People

              oknet Chao Xu
              oknet Chao Xu
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 10m
                  2h 10m