TS-5105: Do vc->con.setRemote(target) before socksEntry->init()

(cherry picked from commit 25140ce7b2d2d8214bbc22dde6a2db9144ff2693)